cargo-features = ["named-profiles"] # for coverage

[package]
name = "moxie"
version = "0.3.0-pre"
description = "Incremental runtime for interactive software."
categories = ["asynchronous", "caching", "concurrency", "gui", "rust-patterns"]
keywords = ["incremental", "memoize", "intern", "reactive"]
readme = "CHANGELOG.md"

# update here, update everywhere!
license = "MIT/Apache-2.0"
homepage = "https://moxie.rs"
repository = "https://github.com/anp/moxie.git"
authors = ["Adam Perry <lol@anp.lol>"]
edition = "2018"

[dependencies]
futures = "0.3.5"
illicit = { path = "illicit", version = "1" }
parking_lot = "0.11"
scopeguard = "1"
topo = { path = "topo", version = "0.12.0"}
tracing = "^0.1"


[dev-dependencies]
criterion = "0.3"
tracing-subscriber = "0.2.1"

[workspace]
members = [
    "dom",
    "dom/augdom",
    "dom/examples/drivertest",
    "dom/examples/hacking",
    "dom/examples/ssr",
    "dom/examples/todo",
    "dom/raf",
    "illicit",
    "illicit/macro",
    "mox",
    "mox/impl",
    "topo",
    "topo/macro",
]
exclude = [
    "ofl",
]

[[bench]]
name = "core"
harness = false
