[package]
name = "moxie"
version = "0.7.1"
description = "Incremental runtime for interactive software."
categories = ["asynchronous", "caching", "concurrency", "gui", "rust-patterns"]
keywords = ["incremental", "memoize", "intern", "reactive"]
readme = "CHANGELOG.md"

# update here, update everywhere!
license = "MIT/Apache-2.0"
homepage = "https://moxie.rs"
repository = "https://github.com/anp/moxie.git"
authors = ["Adam Perry <lol@anp.lol>"]
edition = "2018"

[features]
default = []
wasm-bindgen = [ "dyn-cache/wasm-bindgen", "parking_lot/wasm-bindgen", "topo/wasm-bindgen" ]

[dependencies]
dyn-cache = { path = "dyn-cache", version = "0.12.2"}
futures = "0.3.5"
illicit = { path = "illicit", version = "1.1.2"}
parking_lot = "0.12"
scopeguard = "1"
topo = { path = "topo", version = "0.13.2"}
tracing = "^0.1"

[dev-dependencies]
criterion = "0.3"
tracing-subscriber = { version = "0.3.1", features = [ "env-filter" ] }

[workspace]
members = [
    "dom",
    "dom/augdom",
    "dom/examples/counter_fn",
    "dom/examples/dom_builder",
    "dom/examples/drivertest",
    "dom/examples/hacking",
    "dom/examples/ssr",
    "dom/examples/todo",
    "dom/prettiest",
    "dom/raf",
    "dyn-cache",
    "illicit",
    "illicit/macro",
    "mox",
    "topo",
    "topo/macro",
]
exclude = [
    "ofl",
]

[[bench]]
name = "core"
harness = false
