[package]
name = "moxie-dom"
version = "0.3.0-pre"
description = "Incrementally interactive HTML applications."
categories = ["asynchronous", "concurrency", "gui", "wasm", "web-programming"]
keywords = ["dom", "web", "incremental", "interactive"]
readme = "CHANGELOG.md"

# update here, update everywhere!
license = "MIT/Apache-2.0"
homepage = "https://moxie.rs"
repository = "https://github.com/anp/moxie.git"
authors = ["Adam Perry <lol@anp.lol>"]
edition = "2018"

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
all-features = true

[lib]
crate-type = [ "cdylib", "rlib", ]

[features]
default = ["webdom"]
rsdom = ["augdom/rsdom"]
webdom = ["augdom/webdom", "raf", "wasm-bindgen-futures"]

[dependencies]
augdom = { path = "augdom", version = "0.2.0-pre"}
futures = "0.3.5"
illicit = { path = "../illicit", version = "1.0.0"}
moxie = { path = "../", version = "0.3.0-pre"}
paste = "0.1.12"
scopeguard = "1"
topo = { path = "../topo", version = "0.12.0"}

# web-only
raf = { path = "raf", version = "0.2.0-pre", optional = true }
wasm-bindgen-futures = { version = "0.4.13", optional = true }

[dev-dependencies]
mox = { path = "../mox", version = "0.10.0-pre"}
pretty_assertions = "0.6"
wasm-bindgen-test = "0.3"
