[package]
name = "dyn-cache"
version = "0.12.1"
description = "Query cache indexed by type."
categories = ["caching", "rust-patterns"]
keywords = ["incremental", "memoize", "intern", "cache"]
readme = "CHANGELOG.md"

# update here, update everywhere!
license = "MIT/Apache-2.0"
homepage = "https://moxie.rs"
repository = "https://github.com/anp/moxie.git"
authors = ["Adam Perry <lol@anp.lol>"]
edition = "2018"

[features]
default = []
wasm-bindgen = [ "parking_lot/wasm-bindgen" ]

[dependencies]
downcast-rs = "1.1.1"
hash_hasher = "2.0.3"
hashbrown = "0.10.0"
illicit = { path = "../illicit", version = "1.1.1"}
parking_lot = "0.11.0"
paste = "1.0.0"

[dev-dependencies]
scopeguard = "1"
