[package]
name = "honk"
version = "7.0.0"
description = "An awful billed system."
categories = []
keywords = ["build", "task", "cargo", "make"]
readme = "README.md"

# update here, update everywhere!
license = "MIT/Apache-2.0"
homepage = "https://moxie.rs"
repository = "https://github.com/anp/moxie.git"
authors = ["Adam Perry <lol@anp.lol>"]
edition = "2018"

[dependencies]
argh = "0.1.4"
codemap = "0.1.3"
codemap-diagnostic = "0.1.1"
color-eyre = "0.5.6"
crossbeam-channel = "0.4.0"
memofs = "0.1.2"
serde_json = "1.0.59"
starlark = "0.3.1"
thiserror = "1.0.21"
tracing = "0.1.21"
tracing-error = "0.1.2"
tracing-subscriber = { version = "0.2.15", features = ["fmt"] }
