[package]
name = "honk"
version = "7.0.0"
description = "An awful billed system."
categories = []
keywords = ["build", "task", "cargo", "make"]
readme = "README.md"

# update here, update everywhere!
license = "MIT/Apache-2.0"
homepage = "https://moxie.rs"
repository = "https://github.com/anp/moxie.git"
authors = ["Adam Perry <lol@anp.lol>"]
edition = "2018"

[dependencies]
anyhow = "1"
argh = "0.1.4"
color-eyre = "0.5.6"
crossbeam-channel = "0.4.0"
glob = "0.3.0"
memofs = "0.1.2"
once_cell = "1"
parking_lot = "0.11.1"
serde_json = "1.0.59"
thiserror = "1.0.21"
tracing = "0.1.21"
tracing-error = "0.1.2"
tracing-subscriber = { version = "0.2.15", features = ["fmt"] }

# starlark deps -- revisions must be kept in sync
gazebo = { git = "https://github.com/facebookincubator/gazebo" }
starlark = { git = "https://github.com/facebookexperimental/starlark-rust", rev = "8a8523f" }
starlark_module = { git = "https://github.com/facebookexperimental/starlark-rust", rev = "8a8523f" }
