[package]
name = "illicit"
version = "0.10.0-pre"
description = "Type-indexed, dynamically-scoped, thread-local singletons."
categories = ["development-tools::testing", "gui", "rust-patterns"]
keywords = ["context", "global", "singleton"]
readme = "CHANGELOG.md"

# update here, update everywhere!
license = "MIT/Apache-2.0"
homepage = "https://moxie.rs"
repository = "https://github.com/anp/moxie.git"
authors = ["Adam Perry <lol@anp.lol>"]
edition = "2018"

[dependencies]
illicit-macro = { path = "macro", version = "0.10.0-pre"}
owning_ref = "0.4"
scopeguard = "1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "basic_env"
harness = false
