[package]
name = "illicit"
version = "1.1.0"
description = "An implicit thread-local environment which is indexed by type."
categories = ["rust-patterns"]
keywords = ["context", "environment", "global", "singleton"]
readme = "CHANGELOG.md"

# update here, update everywhere!
license = "MIT/Apache-2.0"
homepage = "https://moxie.rs"
repository = "https://github.com/anp/moxie.git"
authors = ["Adam Perry <lol@anp.lol>"]
edition = "2018"

[dependencies]
illicit-macro = { path = "macro", version = "1.0.0"}
owning_ref = "0.4"
scopeguard = "1"

[dev-dependencies]
criterion = "0.3"
insta = "0.16.1"

[[bench]]
name = "basic_env"
harness = false
