[package]
name = "moxie-macros"
version = "0.1.0"
description = "Macros for the moxie crate."
readme = "../CHANGELOG.md"

# update here, update everywhere!
license = "MIT/Apache-2.0"
homepage = "https://moxie.rs"
repository = "https://github.com/anp/moxie.git"
authors = ["Adam Perry <lol@anp.lol>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = "1"