[package]
name = "mox-macro"
version = "0.1.0"
authors = ["Adam Perry <adam.n.perry@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "macro for ui components"

[lib]
proc-macro = true

[dependencies]
gll = "0.0.2"
gll-macros = "0.0.2"
proc-macro2 = "0.4.20"
proc-macro-hack = "0.5"
quote = "0.6"
