[package]
name = "mox"
version = "0.10.0"
description = "Mockery Of X(ML): a JSX-alike syntax for the builder pattern."
categories = ["gui", "rust-patterns"]
keywords = ["jsx", "xml", "builder"]
readme = "CHANGELOG.md"

# update here, update everywhere!
license = "MIT/Apache-2.0"
homepage = "https://moxie.rs"
repository = "https://github.com/anp/moxie.git"
authors = ["Adam Perry <lol@anp.lol>"]
edition = "2018"

[dependencies]
mox-impl = { path = "impl", version = "0.10.0"}
proc-macro-hack = "0.5"
proc-macro-nested = "0.1.3"
topo = { path = "../topo", version = "0.12.0"}

[dev-dependencies]
derive_builder = "0.9"
