[package]
name = "mox"
version = "0.12.0"
description = "Mockery Of X(ML): a JSX-alike syntax for the builder pattern."
categories = ["gui", "rust-patterns"]
keywords = ["jsx", "xml", "builder"]
readme = "CHANGELOG.md"

# update here, update everywhere!
license = "MIT/Apache-2.0"
homepage = "https://moxie.rs"
repository = "https://github.com/anp/moxie.git"
authors = ["Adam Perry <lol@anp.lol>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn-rsx = "0.8.0-beta.2"
syn = "^1"

[dev-dependencies]
derive_builder = "0.10"
