[package]
name = "moxie-dom"
version = "0.1.0"
authors = ["Adam Perry <adam.n.perry@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "TBA"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures01 = { package = "futures", version = "0.1", optional = true }
futures-preview = { version = "=0.3.0-alpha.15", features = ["compat"] }
moxie = { path = "../", version = "0.1" }
stdweb = "0.4.16"
tokio-trace = { version = "0.1", features = ["log"] }
wasm-bindgen-futures= "0.3"
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.2"
