[package]
name = "moxie-wrench"
version = "0.1.0"
authors = ["Adam Perry <adam.n.perry@gmail.com>"]
edition = "2018"

[dependencies]
moxie = { path = "../" }
futures-preview = "0.3.0-alpha.12"
gleam = "0.6.8"
glutin = "0.17"
log = "0.4"
parking_lot = "0.7"
salsa = "0.10"
time = "0.1"
timer = "0.2"
webrender = "0.58"
winit = "0.16"

[dev-dependencies]
env_logger = "0.5"
