[package]
name = "moxie-wrench"
version = "0.1.0"
authors = ["Adam Perry <adam.n.perry@gmail.com>"]
edition = "2018"

[dependencies]
moxie = { path = "../" }
futures-preview = "0.3.0-alpha.13"
gleam = "0.6.8"
glutin = "0.17"
noisy_float = "0.1"
parking_lot = "0.7"
time = "0.1"
timer = "0.2"
tokio-trace = { git = "https://github.com/tokio-rs/tokio" }
webrender = "0.58"
winit = "0.16"

[dev-dependencies]
tokio-trace-fmt = { git = "https://github.com/tokio-rs/tokio-trace-nursery" }
