[package]
name = "ofl"
version = "0.2.0-alpha.0-pre"
authors = ["Adam Perry <adam.n.perry@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "outcome-oriented project task tool, as in 'all task runners are...'"
repository = "https://github.com/anp/moxie/tree/master/ofl"

[dependencies]
actix = "0.9"
actix-files = "0.2"
actix-web = "2"
actix-web-actors = "2"
cargo_metadata = "0.10.0"
crates_io_api = "0.5"
crossbeam = "=0.7.2"
dialoguer = "0.6"
failure = "0.1"
futures = "0.3"
gumdrop = "0.6"
http = "0.2"
mdbook = "0.3.1"
notify = "5.0.0-pre.2"
opener = "0.4"
pathfinding = "1.1.12"
pretty_env_logger = "0.3"
semver = "0.9"
spongedown = "0.3.2"
toml_edit = "0.1.5"
tracing = { version = "^0.1", features = [ "log" ] }
tracing-fmt = "0.0.1-alpha.3"
walkdir = "2.2.9"
