[package]
name = "ofl"
version = "0.2.0-alpha.0-pre"
authors = ["Adam Perry <adam.n.perry@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "outcome-oriented project task tool, as in 'all task runners are...'"
repository = "https://github.com/anp/moxie/tree/master/ofl"

[dependencies]
actix = "0.10.0-alpha.3"
actix-files = "0.3.0-alpha.1"
actix-web = "3.0.0-alpha.3"
actix-web-actors = "3.0.0-alpha.1"
cargo_metadata = "0.10.0"
crates_io_api = "0.5"
crossbeam = "0.7.3"
dialoguer = "0.6"
failure = "0.1"
futures = "0.3"
gumdrop = { version = "0.8", features = ["default_expr"] }
http = "0.2"
mdbook = "0.3.1"
notify = "5.0.0-pre.2"
opener = "0.4"
pathfinding = "2.0.4"
semver = "0.9"
spongedown = "0.4.1"
toml_edit = "0.1.5"
tracing = { version = "^0.1", features = [ "log" ] }
tracing-subscriber = { version = "0.2.5", features = [ "fmt" ] }
walkdir = "2.2.9"
