[package]
name = "ofl"
version = "0.2.0-alpha.0-pre"
authors = ["Adam Perry <lol@anp.lol>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "outcome-oriented project task tool, as in 'all task runners are...'"
repository = "https://github.com/anp/moxie/tree/main/ofl"

[dependencies]
actix = "0.10.0-alpha.3"
actix-files = "0.3.0-alpha.1"
actix-rt = "1.1.1"
actix-web = "3.0.0-alpha.3"
actix-web-actors = "3.0.0-alpha.1"
anyhow = "1"
cargo_metadata = "0.12.0"
crates-index = "0.16.0"
crossbeam = "0.7.3"
dialoguer = "0.6"
futures = "0.3"
git2 = "0.13.6"
grcov = "0.5.15"
gumdrop = { version = "0.8", features = ["default_expr"] }
http = "0.2"
lol_html = "0.2.0"
mdbook = "0.3.1"
notify = "5.0.0-pre.2"
opener = "0.4"
pathfinding = "2.0.4"
pin-utils = "0.1.0"
rustc-hash = "1.1.0"
semver = "0.11"
serde_json = "1.0.53"
spongedown = "0.4.1"
tempfile = "3.1.0"
toml_edit = "0.1.5"
tracing = { version = "^0.1", features = [ "log" ] }
tracing-subscriber = { version = "0.2.5", features = [ "fmt" ] }
walkdir = "2.2.9"
which = "4.0.2"

[dependencies.reqwest] # force cargo to vendor native-tls (see issue #35)
version = "0.10.6"
features = ["blocking", "native-tls-vendored"]
