[package]
name = "project"
version = "0.1.0-alpha-pre"
authors = ["Adam Perry <adam.n.perry@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Declarative, asynchronous, incremental UI runtime."
repository = "https://github.com/anp/moxie"

[dependencies]
actix = "0.8"
actix-files = "0.1"
actix-web = "1"
actix-web-actors = "1"
crossbeam = "0.7"
failure = "0.1"
futures01 = { version = "0.1", package = "futures" }
gumdrop = "0.6"
notify = "5.0.0-pre.1"
opener = "0.4"
pretty_env_logger = "0.3"
spongedown = "0.3.2"
tracing = { version = "0.1", features = [ "log" ] }
tracing-fmt = "0.0.1-alpha.3"
walkdir = "2.2.9"

[dependencies.futures]
package = "futures-preview"
version = "0.3.0-alpha.18"
features = [ "compat" ]

[workspace]
members = [
    "local-wasm-pack",
    "ensure-published",
]
