[package]
name = "ofl"
description = "awful: a build system"
version = "0.1.0"
authors = ["Adam Perry <adam.n.perry@gmail.com>"]
edition = "2018"
publish = false

[[bin]]
name = "main"
path = "src/ofl.rs"

[dependencies]
escargot = "0.5"
failure = "0.1"
futures-preview = { version = "0.3.0-alpha.17", features = [ "async-await", "compat", "nightly" ]}
gumdrop = "0.6"
hyper = "0.12"
runtime = "0.3.0-alpha.6"
runtime-tokio = "0.3.0-alpha.5"
simple_logger = "1"
tracing = { version = "0.1.3", features = ["log"] }
wasm-pack = "0.8"
