[package]
name = "topo"
version = "0.10.0"
description = "Tools for incrementally computing repeated callgraphs."
categories = ["caching", "data-structures", "gui", "memory-management", "rust-patterns"]
keywords = ["cache", "memoize", "intern", "topology", "incremental"]
readme = "CHANGELOG.md"

# update here, update everywhere!
license = "MIT/Apache-2.0"
homepage = "https://moxie.rs"
repository = "https://github.com/anp/moxie.git"
authors = ["Adam Perry <lol@anp.lol>"]
edition = "2018"

[dependencies]
fxhash = "0.2.1"
hash_hasher = "2.0.3"
hashbrown = "0.8.0"
illicit = { path = "../illicit", version = "1.0.0"}
downcast-rs = "1.1.1"
once_cell = "1.4.0"
parking_lot = "0.11.0"
paste = "0.1.18"
topo-macro = { path = "macro", version = "0.10.0"}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "simple_calls"
harness = false
