[package]
name = "augdom"
version = "0.2.0-pre"
description = "DOM API usable both inside of a browser (web-sys) and outside (emulation)."
categories = ["api-bindings", "emulators", "gui", "wasm", "web-programming"]
keywords = ["dom", "incremental"]
readme = "CHANGELOG.md"

# update here, update everywhere!
license = "MIT/Apache-2.0"
homepage = "https://moxie.rs"
repository = "https://github.com/anp/moxie.git"
authors = ["Adam Perry <lol@anp.lol>"]
edition = "2018"

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
all-features = true

[features]
default = ["webdom"]
rsdom = []
webdom = ["gloo-timers", "js-sys", "wasm-bindgen", "web-sys"]

[dependencies]
futures = "0.3.5"
gloo-timers = { version = "0.2.1", features = ["futures"], optional = true }
quick-xml = "0.18.1"
static_assertions = "1"

# webdom dependencies:
js-sys = { version = "0.3.25", optional = true }
wasm-bindgen = { version = "0.2.48", optional = true }

[dependencies.web-sys]
version = "0.3.28"
optional = true
features = [
    # dom types
    "Attr",
    "CharacterData",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlElement",
    "NamedNodeMap",
    "Node",
    "NodeList",
    "Text",
    "Window",

    # event types
    "AnimationEvent",
    "AudioProcessingEvent",
    "BeforeUnloadEvent",
    "BlobEvent",
    "CloseEvent",
    "CompositionEvent",
    "DeviceMotionEvent",
    "DeviceOrientationEvent",
    "DragEvent",
    "ErrorEvent",
    "FetchEvent",
    "FocusEvent",
    "GamepadEvent",
    "HashChangeEvent",
    "IdbVersionChangeEvent",
    "KeyboardEvent",
    "MessageEvent",
    "MouseEvent",
    "NotificationEvent",
    "OfflineAudioCompletionEvent",
    "PageTransitionEvent",
    "PointerEvent",
    "PopStateEvent",
    "ProgressEvent",
    "PushEvent",
    "SpeechRecognitionEvent",
    "SpeechSynthesisEvent",
    "SpeechSynthesisErrorEvent",
    "StorageEvent",
    "TimeEvent",
    "TouchEvent",
    "TransitionEvent",
    "UiEvent",
    "UserProximityEvent",
    "WheelEvent",

    # testing types,
    "MutationObserver",
    "MutationObserverInit",
    "MutationRecord",

    # TODO these are for examples only, move them there
    "HtmlInputElement",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
