[package]
name = "augdom"
version = "0.2.0-pre"
description = "DOM API usable both inside of a browser (web-sys) and outside (emulation)."
categories = ["api-bindings", "emulators", "gui", "wasm", "web-programming"]
keywords = ["dom", "incremental"]
readme = "CHANGELOG.md"

# update here, update everywhere!
license = "MIT/Apache-2.0"
homepage = "https://moxie.rs"
repository = "https://github.com/anp/moxie.git"
authors = ["Adam Perry <lol@anp.lol>"]
edition = "2018"

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
all-features = true

[features]
default = ["webdom"]
rsdom = ["illicit"]
webdom = ["gloo-timers", "js-sys", "prettiest", "wasm-bindgen", "web-sys"]

[dependencies]
futures = "0.3.5"
gloo-timers = { version = "0.2.1", features = ["futures"], optional = true }
illicit = { version = "1.1.2", path = "../../illicit", optional = true }
paste = "1"
quick-xml = "0.27.0"
static_assertions = "1"
tracing = "0.1"

# webdom dependencies:
js-sys = { version = "0.3.25", optional = true }
prettiest = { version = "0.2.0", path = "../prettiest", optional = true }
wasm-bindgen = { version = "0.2.48", optional = true }

[dependencies.web-sys]
version = "0.3.28"
optional = true
features = [
    # dom types
    "Attr",
    "CharacterData",
    "Document",
    "Element",
    "EventTarget",
    "HtmlElement",
    "HtmlHeadElement",
    "NamedNodeMap",
    "Node",
    "NodeList",
    "Text",
    "Window",

    # event types
    "AnimationEvent",
    "AnimationEventInit",
    "BlobEvent",
    "BlobEventInit",
    "CloseEvent",
    "CloseEventInit",
    "CompositionEvent",
    "CompositionEventInit",
    "DeviceMotionEvent",
    "DeviceMotionEventInit",
    "DeviceOrientationEvent",
    "DeviceOrientationEventInit",
    "DragEvent",
    "DragEventInit",
    "ErrorEvent",
    "ErrorEventInit",
    "Event",
    "EventInit",
    "FetchEvent",
    "FetchEventInit",
    "FocusEvent",
    "FocusEventInit",
    "GamepadEvent",
    "GamepadEventInit",
    "HashChangeEvent",
    "HashChangeEventInit",
    "IdbVersionChangeEvent",
    "IdbVersionChangeEventInit",
    "KeyboardEvent",
    "KeyboardEventInit",
    "MessageEvent",
    "MessageEventInit",
    "MouseEvent",
    "MouseEventInit",
    "NotificationEvent",
    "NotificationEventInit",
    "OfflineAudioCompletionEvent",
    "OfflineAudioCompletionEventInit",
    "PageTransitionEvent",
    "PageTransitionEventInit",
    "PointerEvent",
    "PointerEventInit",
    "PopStateEvent",
    "PopStateEventInit",
    "ProgressEvent",
    "ProgressEventInit",
    "PushEvent",
    "PushEventInit",
    "SpeechRecognitionEvent",
    "SpeechRecognitionEventInit",
    "SpeechSynthesisEvent",
    "SpeechSynthesisEventInit",
    "SpeechSynthesisErrorEvent",
    "SpeechSynthesisErrorEventInit",
    "StorageEvent",
    "StorageEventInit",
    "TouchEvent",
    "TouchEventInit",
    "TransitionEvent",
    "TransitionEventInit",
    "UiEvent",
    "UiEventInit",
    "UserProximityEvent",
    "UserProximityEventInit",
    "WheelEvent",
    "WheelEventInit",

    # testing types,
    "MutationObserver",
    "MutationObserverInit",
    "MutationRecord",

    # TODO these are for examples only, move them there
    "HtmlInputElement",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
