[package]
name = "local-wasm-pack"
version = "0.1.0-pre"
authors = ["Adam Perry <adam.n.perry@gmail.com>"]
edition = "2018"
publish = false
description = "uses wasm-pack as a library to have cargo install it for us"

[[bin]]
path = "wasm-pack.rs"
name = "wasm-pack"

[dependencies]
pretty_env_logger = "0.3"
structopt = "0.2"

[dependencies.wasm-pack]
version = "0.9.1"

[workspace]