[package]
name = "moxml"
version = "0.1.0-pre"
edition = "2018"
authors = ["Adam Perry <adam.n.perry@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Mockery Of XML: a JSX-like macro for moxie-dom."
repository = "https://github.com/anp/moxie"

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = "0.5"
snax = "0.2.0"