[package]
name = "moxml"
version = "0.1.0-pre"
edition = "2018"
authors = ["Adam Perry <adam.n.perry@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Mockery Of XML: a JSX-like macro for moxie-dom."
repository = "https://github.com/anp/moxie"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "0.2.6"
proc-macro-hack = "0.5"

[dependencies.snax]
git = "https://github.com/LPGhatguy/snax.git"
rev = "e824501bd250eecd292561bb39efcfcfbfaf049d"
