[package]
name = "prettiest"
version = "0.2.1"
description = "Pretty-printer for JS values from wasm-bindgen."
categories = ["web"]
keywords = ["debug", "pretty", "javascript"]
readme = "CHANGELOG.md"

# update here, update everywhere!
license = "MIT/Apache-2.0"
homepage = "https://moxie.rs"
repository = "https://github.com/anp/moxie.git"
authors = ["Adam Perry <lol@anp.lol>"]
edition = "2018"

[package.metadata.honk]
browser-tests = true

[dependencies]
js-sys = "0.3.25"
scopeguard = "1.1.0"
wasm-bindgen = "0.2.48"

[dependencies.web-sys]
version = "0.3.28"
features = [
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlElement",
    "KeyboardEvent",
    "KeyboardEventInit",
    "Window",
]

[dev-dependencies]
futures = "0.3.5"
wasm-bindgen-test = "0.3"
