[package]
name = "raf"
version = "0.2.0-pre"
edition = "2018"
authors = ["Adam Perry <lol@anp.lol>"]
license = "MIT/Apache-2.0"
description = "browser event loop scheduler using requestAnimationFrame"
repository = "https://github.com/anp/moxie"

[dependencies]
futures = "0.3"
wasm-bindgen = "0.2.48"
web-sys = { version = "0.3.28", features = ["Window"] }
