[package]
name = "raf"
version = "0.2.0-pre"
description = "browser event loop scheduler using requestAnimationFrame"
categories = ["asynchronous", "concurrency", "gui", "wasm", "web-programming"]
keywords = ["scheduler", "events", "requestAnimationFrame"]
readme = "CHANGELOG.md"

# update here, update everywhere!
license = "MIT/Apache-2.0"
homepage = "https://moxie.rs"
repository = "https://github.com/anp/moxie.git"
authors = ["Adam Perry <lol@anp.lol>"]
edition = "2018"

[dependencies]
futures = "0.3"
wasm-bindgen = "0.2.48"
web-sys = { version = "0.3.28", features = ["Window"] }
