[package]
name = "illicit-macro"
version = "0.10.0-pre"
description = "procedural macros for the illicit crate"
readme = "../CHANGELOG.md"

# update here, update everywhere!
license = "MIT/Apache-2.0"
homepage = "https://moxie.rs"
repository = "https://github.com/anp/moxie.git"
authors = ["Adam Perry <lol@anp.lol>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
