[package]
name = "mox-impl"
version = "0.10.0-pre"
description = "Implementation for the mox! macro."
categories = ["gui", "rust-patterns"]
keywords = ["jsx", "xml", "builder"]
readme = "../CHANGELOG.md"

# update here, update everywhere!
license = "MIT/Apache-2.0"
homepage = "https://moxie.rs"
repository = "https://github.com/anp/moxie.git"
authors = ["Adam Perry <lol@anp.lol>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
proc-macro-error = "1.0.0"
proc-macro-hack = "0.5"
quote = "1"
snax = "0.3.0"
